fix: update oas-doc.yaml
- add other attributes for Ingredients
